test/e2e/suites/endpoint-selection/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: gw-eps
spec:
  gatewayClassName: meridio
  infrastructure:
    parametersRef:
      group: meridio-2.nordix.org
      kind: GatewayConfiguration
      name: gwconfig-eps
  listeners:
  - name: all
    protocol: ALL
    port: 1
---
apiVersion: meridio-2.nordix.org/v1alpha1
kind: GatewayConfiguration
metadata:
  name: gwconfig-eps
spec:
  networkAttachments:
  - type: NAD
    nad:
      name: sysctl-tuning
      namespace: e2e-endpoint-selection
      interface: dummy
  - type: NAD
    nad:
      name: vlan-800
      namespace: e2e-endpoint-selection
      interface: vlan-800
  - type: NAD
    nad:
      name: app-net
      namespace: e2e-endpoint-selection
      interface: net1
  internalSubnets:
  - attachmentType: NAD
    cidr: "169.111.50.0/24"
  horizontalScaling:
    replicas: 1
